--- a/css/css/style.css
+++ b/css/css/style.css
@@ -8,7 +8,7 @@ p {
     font-style: italic;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* font-size: 1.5rem; */
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 .p2{
